# Rustodon

./: .cursorrules  .gitignore  API_LAYER_COMPLETE.md  API_TEST_REPORT.md  AUTOMATED_TESTING_COMPLETE.md  AUTO_FIX_REPORT.md  COMPILATION_STATUS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DATABASE_SETUP_COMPLETE.md  DOCKER.md  Dockerfile  Dockerfile.local  Dockerfile.minimal  Dockerfile.simple  ENVIRONMENT_SETUP.md  LICENSE  PROJECT_ORGANIZATION.md  PROJECT_SUMMARY.md  README.md  add_sqlx_dependencies.sh  advanced_api_test.sh  auto_update_github.sh  automated_test.sh  complete_project_push.sh  comprehensive_curl_test.sh  create_missing_cargo_toml.sh  curl_account1.txt  curl_instance.txt  curl_root.txt  curl_statuses.txt  curl_test_output.txt  database_setup.sql  dev_auto.sh  docker-compose.simple.yml  docker-compose.yml  docker_test.sh  docker_test_setup.sh  env.example  (+31 more)
crates/auth/rustodon-oauth/: Cargo.toml
crates/auth/rustodon-oauth/src/: lib.rs
crates/database/rustodon-migrations/: Cargo.toml  Cargo.toml.backup
crates/database/rustodon-migrations/migrations/: 20250630054524_add_mutes_table_up.sql  20250630062924_add_lists_table_up.sql  20250630063200_add_filter_keywords_table_up.sql  20250630063300_add_favourites_table_up.sql  20250630063700_add_reblogs_table_up.sql  20250630071100_create_oauth_applications_index_up.sql  20250630072000_add_list_fields_up.sql  20250703000000_create_ip_blocks_table.sql  20250703000100_create_tags_and_related_tables.sql  20250703010000_fix_follows_table.sql
crates/database/rustodon-migrations/migrations_clean/: 20250101000001_create_users_table.sql  20250101000002_create_statuses_table.sql  20250101000003_create_follows_table.sql  20250101000004_add_missing_user_columns.sql  20250101000005_add_user_status_enum_and_column.sql  20250630054409_add_blocks_table_up.sql  20250630062943_add_list_accounts_table_up.sql  20250630063800_add_filters_title_field_up.sql  20250630063900_add_filter_keywords_whole_word_field_up.sql  20250630071000_create_oauth_applications_down.sql
crates/database/rustodon-migrations/src/: main.rs
crates/features/rustodon-blocks/: Cargo.toml
crates/features/rustodon-blocks/examples/: example.rs
crates/features/rustodon-blocks/src/: lib.rs
crates/features/rustodon-groups/: Cargo.toml
crates/utils/rustodon-queue/: Cargo.toml
docs/: api.md  deployment.md  development.md
migrations/: 20250630054409_add_blocks_table_up.sql  20250630054524_add_mutes_table_up.sql  20250630062924_add_lists_table_up.sql  20250630062943_add_list_accounts_table_up.sql  20250630063000_add_notifications_table_up.sql  20250630063100_add_filters_table_up.sql  20250630063200_add_filter_keywords_table_up.sql  20250630063300_add_favourites_table_up.sql  20250630063400_add_users_table_up.sql  20250630063500_add_statuses_table_up.sql  20250701000001_add_media_attachments_table_up.sql
rustodon/: .gitignore
rustodon-access-grants/: Cargo.toml
rustodon-access-tokens/: Cargo.toml
rustodon-account-aliases/: Cargo.toml  Cargo.toml.backup
rustodon-account-conversations/: Cargo.toml
rustodon-account-deletion-requests/: Cargo.toml  Cargo.toml.backup
rustodon-account-moderation-notes/: Cargo.toml  Cargo.toml.backup
rustodon-account-notes/: Cargo.toml
rustodon-account-suggestions/: Cargo.toml  Cargo.toml.backup
rustodon-account-warnings/: Cargo.toml
rustodon-accounts/: Cargo.toml  Cargo.toml.backup
rustodon-analytics/: Cargo.toml  Cargo.toml.backup
rustodon-announcements/: Cargo.toml
rustodon-annual-reports/: Cargo.toml
rustodon-appeals/: Cargo.toml  Cargo.toml.backup
rustodon-applications/: Cargo.toml
rustodon-auth/: Cargo.toml  Cargo.toml.backup
rustodon-blocks/: Cargo.toml  Cargo.toml.backup
rustodon-bookmarks/: Cargo.toml  Cargo.toml.backup
rustodon-bulk-imports/: Cargo.toml
rustodon-cache/: Cargo.toml
rustodon-canonical-email-blocks/: Cargo.toml
rustodon-cli/: Cargo.toml
rustodon-conversations/: Cargo.toml  Cargo.toml.backup
rustodon-core/: Cargo.toml  Cargo.toml.backup
rustodon-devices/: Cargo.toml
rustodon-domains/: Cargo.toml  Cargo.toml.backup
rustodon-email-domain-blocks/: Cargo.toml
rustodon-encrypted-messages/: Cargo.toml  Cargo.toml.backup
rustodon-favourites/: Cargo.toml
rustodon-federation/: Cargo.toml  Cargo.toml.backup
rustodon-filters/: Cargo.toml
rustodon-follow-recommendation-suppressions/: Cargo.toml  Cargo.toml.backup
rustodon-follow-requests/: Cargo.toml  Cargo.toml.backup
rustodon-follows/: Cargo.toml
rustodon-groups/: Cargo.toml  Cargo.toml.backup
rustodon-ip-blocks/: Cargo.toml
rustodon-lists/: Cargo.toml
rustodon-logging/: Cargo.toml
rustodon-mailer/: Cargo.toml
rustodon-media/: Cargo.toml  Cargo.toml.backup
rustodon-mentions/: Cargo.toml  Cargo.toml.backup
rustodon-metrics/: Cargo.toml  Cargo.toml.backup
rustodon-migrations/: Cargo.toml
rustodon-mutes/: Cargo.toml
rustodon-notifications/: Cargo.toml
rustodon-oauth/: Cargo.toml  Cargo.toml.backup
rustodon-preview-cards/: Cargo.toml  Cargo.toml.backup
rustodon-queue/: Cargo.toml  Cargo.toml.backup
rustodon-reblogs/: Cargo.toml  Cargo.toml.backup
rustodon-scheduler/: Cargo.toml  Cargo.toml.backup
rustodon-search/: Cargo.toml
rustodon-server/: Cargo.toml  Cargo.toml.backup  Dockerfile
rustodon-sessions/: Cargo.toml
rustodon-severed-relationships/: Cargo.toml
rustodon-software-updates/: Cargo.toml  Cargo.toml.backup
rustodon-status-pins/: Cargo.toml  Cargo.toml.backup
rustodon-statuses/: Cargo.toml  Cargo.toml.backup
rustodon-storage/: Cargo.toml
rustodon-streaming/: Cargo.toml
rustodon-streaming/src/: lib.rs
rustodon-tag-follows/: Cargo.toml  Cargo.toml.backup
rustodon-tags/: Cargo.toml
rustodon-terms-of-service/: Cargo.toml
rustodon-user-settings/: Cargo.toml
rustodon-web/: Cargo.toml  Cargo.toml.backup
rustodon-webauthn-credentials/: Cargo.toml
rustodon-webhooks/: Cargo.toml  Cargo.toml.backup
rustodon-workers/: Cargo.toml  Cargo.toml.backup
scripts/: README.md  api_test_suite.sh  automated_test_workflow.sh  build-local.sh  setup_db.sh  (+5 more)
(+251 files in other folders)
