[workspace]
resolver = "2"
members = [
    # Core crates
    "crates/core/rustodon-core",
    # API crates
    "crates/api/rustodon-api",
    "crates/api/rustodon-activitypub",
    "crates/api/rustodon-streaming",
    # Auth crates
    "crates/auth/rustodon-auth",
    "crates/auth/rustodon-oauth",
    "crates/auth/rustodon-sessions",
    "crates/auth/rustodon-webauthn-credentials",
    # Database crates
    "crates/database/rustodon-db",
    "crates/database/rustodon-migrations",
    # Admin crates
    "crates/admin/rustodon-admin",
    # Federation crates
    "crates/federation/rustodon-federation",
    # Media crates
    "crates/media/rustodon-media",
    "crates/media/rustodon-storage",
    # Utility crates
    "crates/utils/rustodon-config",
    "crates/utils/rustodon-cache",
    "crates/utils/rustodon-queue",
    "crates/utils/rustodon-metrics",
    "crates/utils/rustodon-logging",
    "crates/utils/rustodon-mailer",
    "crates/utils/rustodon-search",
    "crates/utils/rustodon-scheduler",
    "crates/utils/rustodon-workers",
    "crates/utils/rustodon-webhooks",
    # CLI crates
    "crates/cli/rustodon-cli",
    # Server crates
    "crates/server/rustodon-server",
    "crates/server/rustodon-web",
    # Feature crates
    "crates/features/rustodon-access-grants",
    "crates/features/rustodon-access-tokens",
    "crates/features/rustodon-account-aliases",
    "crates/features/rustodon-account-conversations",
    "crates/features/rustodon-account-deletion-requests",
    "crates/features/rustodon-account-moderation-notes",
    "crates/features/rustodon-account-notes",
    "crates/features/rustodon-account-suggestions",
    "crates/features/rustodon-account-warnings",
    "crates/features/rustodon-accounts",
    "crates/features/rustodon-analytics",
    "crates/features/rustodon-announcements",
    "crates/features/rustodon-annual-reports",
    "crates/features/rustodon-appeals",
    "crates/features/rustodon-applications",
    "crates/features/rustodon-blocks",
    "crates/features/rustodon-bookmarks",
    "crates/features/rustodon-bulk-imports",
    "crates/features/rustodon-canonical-email-blocks",
    "crates/features/rustodon-conversations",
    "crates/features/rustodon-custom-emojis",
    "crates/features/rustodon-devices",
    "crates/features/rustodon-domains",
    "crates/features/rustodon-email-domain-blocks",
    "crates/features/rustodon-encrypted-messages",
    "crates/features/rustodon-favourites",
    "crates/features/rustodon-filters",
    "crates/features/rustodon-follow-recommendation-suppressions",
    "crates/features/rustodon-follow-requests",
    "crates/features/rustodon-follows",
    "crates/features/rustodon-groups",
    "crates/features/rustodon-instances",
    "crates/features/rustodon-ip-blocks",
    "crates/features/rustodon-lists",
    "crates/features/rustodon-mentions",
    "crates/features/rustodon-mutes",
    "crates/features/rustodon-notifications",
    "crates/features/rustodon-polls",
    "crates/features/rustodon-preview-cards",
    "crates/features/rustodon-reblogs",
    "crates/features/rustodon-reports",
    "crates/features/rustodon-scheduled-statuses",
    "crates/features/rustodon-severed-relationships",
    "crates/features/rustodon-software-updates",
    "crates/features/rustodon-status-pins",
    "crates/features/rustodon-statuses",
    "crates/features/rustodon-tag-follows",
    "crates/features/rustodon-tags",
    "crates/features/rustodon-terms-of-service",
    "crates/features/rustodon-trends",
    "crates/features/rustodon-user-settings"
]

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
strip = false

[profile.bench]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
