[package]
name = "rustodon-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true

# Web framework dependencies (only for API crates)
tracing-subscriber.workspace = true
env_logger.workspace = true
log.workspace = true

# Internal dependencies
rustodon-core = { path = "../rustodon-core" }
