[package]
name = "rustodon-oauth"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Rustodon module"
license = "MIT"
repository = "https://github.com/arkCyber/Rustodon"
keywords = ["mastodon", "activitypub", "social", "federation"]
categories = ["social-networking"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"

# Web framework dependencies (only for API crates)
bcrypt = "0.15"
jsonwebtoken = "9.2"
rand = "0.8"

# Database dependencies
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Crypto dependencies
sha2 = "0.10"

# Encoding dependencies
hex = "0.4"

# Internal dependencies
rustodon-core = { path = "../../core/rustodon-core" }
